hphp/hack/test/typecheck/class_meth5.php.exp
File "class_meth5.php", line 20, characters 10-18:
Too many arguments (Typing[4105])
File "class_meth5.php", line 13, characters 26-27:
Definition is here
